--- a/posts/post-with-code/collagen_outcomes/collagen_and_cartilage_joints_muscle_skin_outcomes_refined_blog.qmd
+++ b/posts/post-with-code/collagen_outcomes/collagen_and_cartilage_joints_muscle_skin_outcomes_refined_blog.qmd
@@ -42,7 +42,11 @@ With those ground rules set, I'd like to present my synthesis on collagen's outc
 
 [2024 Meta Analysis/Systematic REview looking at a variety of outcome](https://link.springer.com/article/10.1007/s40279-024-02079-0)
 
--   “Aims to investigate the effects of long-term daily collagen peptide (CP) supplementation on strength, musculotendinous adaptation, functional recovery, and body composition in healthy adults”
+-   “Aims to investigate the effects of long-term daily collagen peptide (CP) supplementation on strength, musculotendinous adaptation, functional recovery, and body composition in healthy adults”.
+
+-   Looked at outcomes measuring fat-free mass, tendon morphology, muscle mass, maximal strength, and recovery in reactive strength following exercise-induced muscle damage.
+
+-   PRISMA chart shows 19 studies that were included with over 768 total participants
 
 -   The meta analysis authors used Standardized Mean Difference as the outcome measure. I maintain that most meta analyses nowadays shouldn’t be using it unless they can give a clear definition of the underlying construct that they’re trying to measure. The definition of the estimand for the meta analyses, is what leads to clear definitions of the construct used for the SMD. it’s a vital part of the process that most meta analyses using SMD don’t seem to do for whatever reason. SMD has almost no proper use case for a meta analysis these days and should only be used by a very very very experienced practitioner
 
@@ -61,22 +65,11 @@ With those ground rules set, I'd like to present my synthesis on collagen's outc
 
 For fun, I tried to see if I can even replicate the above forest plot with the details they gave, but I decided it was too much effort when even the n they reported for the Oertzen study in the forest plot (91) didn't match with the actual n reported.
 
-```{r echo=FALSE}
-#library(tidyverse)
-#library(here)
-
-# initiate a tibble to be used in a meta analysis for SMD with continuous outcomes
-#silly_sports_smd_meta_df <- as.tibble(read.csv(here("posts", "posts-with-code", "collagen_outcomes", "silly_smd_muscle_meta.csv")))
-
-#silly_sports_smd_meta <- 
-#forest(silly_sports_smd_meta)
-```
-
-\
-
 [Found a letter to the editor from a statistician on a supplemental collagen meta analysis done for osteoarthritis outcomes (using the VAS as the main outcome)](https://link.springer.com/epdf/10.1007/s00264-021-05239-3?sharing_token=nZQH2bjn8aRXz2kjvgXdSPe4RwlQNchNByi7wbcMAY7YkNDWBxBnTEnalNaIMriEIQ-pN-PQiuDpXtYmMoYH80QT-utrlaH0mkJ8Ts3rC6AtDefWZTW_Gc17Eim_ydFe6GmJySmqrGTOQU5TgvYTB_OBtiQzd_lnhpMUbs9HeOM%3D) 
 
--   I’m noting this because he succinctly commentates on some of the issues I’m observing with this literature.
+-   Looked at a meta analysis of 6 studies with over 300 patients.
+
+-   I wanted to note this letter because he succinctly commentates on some of the issues I’m observing with this literature.
 
 -   To his point about financial biases: Unlike him, I want to note I personally don’t really care about who funded a study. As long as the results are analytically valid and study design is sound I have no problems who funded it, as they’d be valid independent of funding. Typically if there are nefarious things at play from the financial bias of the funders then they show up in study design, methods, and interpretations and you can criticize the study on the merit of those
 
@@ -86,41 +79,48 @@ We do happen to have a couple of Systematic Reviews on the topic of supplementar
 
 [Role of Collagen Derivatives in Osteoarthritis and Cartilage Repair: A Systematic Scoping Review With Evidence Mapping](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7695755/)
 
+-   41 published studies were ultimately included in the review, 16 ofwhich were preclinical studies and 25 were clinical studies (including
+    four systematic reviews/meta-analyses)
+
 -   Oh dear god, these didn't list baseline protein intakes of people in the study in the review (making me have to go through each trial to find if they did) 
 
     -   Therefore I hate my life and these researchers I hate even more 
 
-    -   At a glance, wildly varying doses of collagen, different molecular weights, whether it's hydrolyzed, varying trial lengths
+-   At a glance, wildly varying doses of collagen, different molecular weights, whether it's hydrolyzed, varying trial lengths. This is a red flag.
 
-    -   Also for some reason smaller studies seem to consistently show higher effect sizes  than larger ones
+-   Also for some reason smaller studies seem to consistently show higher effect sizes than larger ones. This is also another red flag.
 
-Let’s dive into some of these studies individually on the next page…..
+-   We'll end up diving into some of the issues these individual studies had in the next section. The errors found in those trials are broadly representative of the problems most of these trials in this review have. I've definitely come to a different conclusion about collagen than these authors.
 
 [The effects of collagen peptide supplementation on body composition, collagen synthesis, and recovery from joint injury and exercise: a systematic review](https://link.springer.com/article/10.1007/s00726-021-03072-x)
 
 -   Only two studies had a placebo that matched total protein in the placebo. Again…..why would you do something like this?
 
--   And both of those that did have a comparable protein placebo they measured the surrogate outcome MPS, instead of hard outcomes like body composition or joint pain, cartilage size/thickness, etc. So….not really interesting or useful *sigh*
+-   And both of those that did have a comparable protein placebo they measured the surrogate outcome MPS, instead of hard outcomes like body composition or joint pain, cartilage size/thickness, etc. So there's no real conclusion on hard outcomes to be made here.
 
 -   Do I even want to bother with looking at the randomization + power analyses for both of these….I know I’m not going to be happy at a glance. Let’s spare myself the mental burden
 
--   Here’s a trial from where it’s unclear whether the difference in VAS is clinically significant (\< 10): <https://cdnsciencepub.com/doi/10.1139/apnm-2016-0390>
+-   Here’s a trial from the reviewe where it’s unclear whether the difference in VAS is clinically significant (\< 10): <https://cdnsciencepub.com/doi/10.1139/apnm-2016-0390>
 
--   Again, no assessment of baseline protein intake nor were the treatment and control protein matched. So………..we move on
+    -   Again, no assessment of baseline protein intake nor were the treatment and control protein matched. So………..we move on.
 
 [Effects of Oral Collagen on Skin Aging Parameters](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10180699/)
 
--   *Sigh* Yet another meta analysis that used SMD improperly. They did have a meta analyst specialist on this meta so they did a good job with many things, but still have to ding points for SMD.
+-   This meta analysis seems to be the most commonly cited one for the benefits of oral collagen on skin aging outcomes. They meta analyzed 26 RCTs with 1721 patients for a variety of skin related outcomes, like Trans Epidermal Water Loss (TEWL), elasticity, hydration, wrinkles, dermal density, and many more.
 
--   The forest plots at least do a good job of separating time points and other things into relevant subgroup analyses. Though I think they probably fiddled around too much and need to limit the scope of their analysis….but that’s probably a more mild criticism in today’s climate of meta analyses. 🙃
+-   Unlike the previous meta before, they did many more of the basic minimum things right compared to the metas I've cited earlier in this review. But there are still many basic errors to highlight here....
+
+-   This is yet another meta analysis that used SMD improperly. They did have a meta analyst specialist on this meta, but still have to ding points for SMD especially if you don't have to use it and can just convert to common units instead.
+
+-   The forest plots at least do a good job of separating time points and other things into relevant subgroup analyses. (I can't believe I have to offer such a basic point as legitimate praise)
 
 -   Important to note that this meta was situated on trials that focused mainly in older woman between 35 - 60 years of age.
 
--   On the forest plot’s face value, it seems collagen is pretty consistently positive associated with most skin aging metrics here. That said when the metric is SMD it’s hard to interpret what the outcome even means. It gets worse….
+-   On the forest plot’s face value, it seems collagen is pretty consistently positively associated with most skin aging metrics here. That said when the metric is SMD it’s hard to interpret what the outcome even means. It gets worse….
 
 -   ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXfeRmLAtTSFkBLwKvx6h4KRhq-A7fcIrbZVgdUAnuo30VWvjrxw-l_PpWjGd5cNKKM_Y_dpAryblqRCqb8p1Iyyzz2g7MGyCHgGj9hyTO0L5MCM9HVzCzYZW2_56hYQMwMW0U6ZOknlv5rfDKWiG6xpSu9B?key=rf44RV7tAsqSBFC_Mo--og)
 
-    -   So many heterogeneous interventions with respect to dose and type of collagen. 
+    -   So many heterogeneous interventions with respect to dose and type of collagen. This further estranges how the SMD could be interpreted, and is a red flag.
 
 -   This is also an example from one of the trials:
 
@@ -132,11 +132,11 @@ Let’s dive into some of these studies individually on the next page…..
 
 -   ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXdyFmXWfhmGFlorebqGTewi6J7i9SHM65BONOMonsZl5PQ0R5x0c5ZrFKTr-vVZAB4iH1VnY2S16UO8ogaU0YG5wZyc-iZzU9BHaX7M6vX0edOTE3mnE8unDB8-57VNJUD2fTrRJ-Ke0mVOwoRS986JKR4?key=rf44RV7tAsqSBFC_Mo--og)
 
-    -   This meta keeps continuing tradition [of a trial](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8176521/) from this meta that didn’t use a protein controlled placebo or assessed protein intake at baseline. Which is sad because this trial did a better job of explaining their randomization protocols and power analysis better than most!! (only thing missing was explaining their minimum effect size clearly)
+    -   This meta keeps continuing tradition from the other top level reviews with the inclusion [of a trial](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8176521/) that didn’t use a protein controlled placebo or assessed protein intake at baseline. Which is sad because this trial did a better job of explaining their randomization protocols and power analysis better than most!! (only thing missing was explaining their minimum effect size clearly)
 
 -   They did do subgroup analyses for the source of the collagen (what animal) and for supplementation length and different outcomes….but it’s hard to make super robust conclusions here. Especially given their lack of accounting for protein intake and placebo protein control. But if you had to make me flip a coin, I might lean slightly in favor of collagen being beneficial for skin aging markers. But barely so.
 
-Overall if there’s a possible benefit to be had from collagen, the strongest evidence is in skin it seems. But there are still some fundamental issues with this meta that I've highlighted above that greatly diminish my confidence in the results for skin. I think it's responsible for me to admit that I'm not as equipped to evaluate inclusion criteria in these studies, as well as knowing what clinical significance is for a lot of these metrics. I’ll do best consulting a researcher that is more familiar with skin, and update this section.
+Overall if there’s a possible benefit to be had from collagen, the strongest evidence is in skin it seems. But there are still some fundamental issues with this meta that I've highlighted above that greatly diminish my confidence in the results for skin. I also think it's responsible for me to admit that I'm not as equipped to evaluate inclusion criteria in these studies, as well as knowing what clinical significance is for a lot of these metrics. I’ll do best consulting a researcher that is more familiar with skin, and update this section.
 
 # A Closer Look at Individual Studies
 
@@ -171,13 +171,13 @@ Overall if there’s a possible benefit to be had from collagen, the strongest e
 
 -   Some aspects of randomization described (\*victory dance\*)
 
--   Higher sample size than others
+-   Higher sample size than others which is always nice
 
--   They used change scores instead of using the standard ANCOVA and adjusting for baseline, which is generally the best statistical approach for this (so get dinged slightly some points for that)
+-   They used change scores instead of using the standard ANCOVA and adjusting for baseline, which is generally the best statistical approach for this (so get dinged *slightly* some points for that)
 
 -   Did a subgroup for high meat intake to account for effects in people with higher dietary collagen (over 1549 grams of meat per week versus under 1549 grams of meat per week, which if we assume is lean ground beef 1549 grams averaged over the week amounts to around \~55g protein per day and somewhere between 5-20g collagen per day)
 
--   Why do these people keep dichotomizing continuous variables sigh clinicians please stop dichotomizing continuous variables in your research you're throwing valuable information away for no good reason. There are ways to make use of the information kept when it remains continuous
+-   Why do these people keep dichotomizing continuous variables on the median I beg you clinicians please stop dichotomizing continuous variables in your research you're throwing valuable information and variance away for no good reason. There are ways to make use of the information kept when it remains continuous so that it remains informative!!!
 
 -   The higher meat intake group is supposed to measure dietary collagen intake and how much that contributes to the outcome, but that will also track with total protein intake for obvious reasons 
 
@@ -194,7 +194,7 @@ Overall if there’s a possible benefit to be had from collagen, the strongest e
 
     -   Seriously again these researchers are a joke and deserve to be publicly stoned (obviously I’m kidding don’t report me)
 
--   Once again.....didn’t assess baseline protein intake nor is the placebo protein matched. Another completely fatal flaw\
+-   Once again.....didn’t assess baseline protein intake nor is the placebo protein matched. Another completely fatal flaw.\
 
 # My Final Conclusions on the Topic
 
