--- a/posts/post-with-code/collagen_outcomes/collagen_and_cartilage_joints_muscle_skin_outcomes_refined_blog.qmd
+++ b/posts/post-with-code/collagen_outcomes/collagen_and_cartilage_joints_muscle_skin_outcomes_refined_blog.qmd
@@ -11,13 +11,13 @@ categories: [news, code, analysis]
 
 I have to admit something.\
 \
-Before doing the research for this article, I wasn't expecting to dive into collagen much. It seemed like just another supplement raved about by random influencers online, which had the thick musk of "just another undertested fad with little outcome data".\
+Before doing the research for this article, I wasn't expecting to dive into collagen much. It seemed like just another supplement touted by random influencers online for everything from joint health to skin health to basically everything in between involving a connective tissue. \
 \
-From joint health to skin health to basically everything in between involving a connective tissue, there were lots of claims being made. And like most noise on social media about supplements, I chose to ignore it.
+Like most noise on social media about random supplements, I chose to ignore it.
 
-Ultimately, when a couple of different doctors started recommending I consume it too, I was surprised it had made its way into the doctor's office. So, I challenged them to show me evidence. And though I still felt quite indifferent towards the product, it pushed me just enough in the direction of me doing my own searching, since if I was able to give nuanced takes on collagen and share them with those clinicians, it could directly impact other patient care as well for the better.\
+This changed though when a couple of different doctors I knew started recommending I consume it too. I was surprised it had made its way into their clinical recommendations. \
 \
-And so the journey began.\
+Though I still felt quite indifferent towards the product, it pushed me just enough in the direction of me doing my own searching, for nothing more than not having to think about collagen again.\
 \
 Going in, I had a few important considerations for any trial evaluating collagen that I wanted to see fulfilled:
 
@@ -64,21 +64,21 @@ With those ground rules set, I'd like to present my synthesis on collagen's outc
 
 For fun, I tried to see if I can even replicate the above forest plot with the details they gave, but I decided it was too much effort when even the n they reported for the Oertzen study in the forest plot (91) didn't match with the actual n reported.
 
-[Found a letter to the editor from a statistician on a supplemental collagen meta analysis done for osteoarthritis outcomes (using the VAS as the main outcome)](https://link.springer.com/epdf/10.1007/s00264-021-05239-3?sharing_token=nZQH2bjn8aRXz2kjvgXdSPe4RwlQNchNByi7wbcMAY7YkNDWBxBnTEnalNaIMriEIQ-pN-PQiuDpXtYmMoYH80QT-utrlaH0mkJ8Ts3rC6AtDefWZTW_Gc17Eim_ydFe6GmJySmqrGTOQU5TgvYTB_OBtiQzd_lnhpMUbs9HeOM%3D) 
+[Supplemental Collagen Meta Analysis Done for osteoarthritis outcomes (using the VAS as the main outcome)](https://link.springer.com/epdf/10.1007/s00264-021-05239-3?sharing_token=nZQH2bjn8aRXz2kjvgXdSPe4RwlQNchNByi7wbcMAY7YkNDWBxBnTEnalNaIMriEIQ-pN-PQiuDpXtYmMoYH80QT-utrlaH0mkJ8Ts3rC6AtDefWZTW_Gc17Eim_ydFe6GmJySmqrGTOQU5TgvYTB_OBtiQzd_lnhpMUbs9HeOM%3D) 
 
--   Looked at a meta analysis of 6 studies with over 300 patients.
+-   Meta analysis of 6 studies with over 300 patients.
 
--   I wanted to note this letter because he succinctly commentates on some of the issues I’m observing with this literature.
+-   I wanted to note this letter because the author succinctly commentates on some of the issues I’m observing with this literature.
 
--   To his point about financial biases: Unlike him, I want to note I personally don’t really care about who funded a study. As long as the results are analytically valid and study design is sound I have no problems who funded it, as they’d be valid independent of funding. Typically if there are nefarious things at play from the financial bias of the funders then they show up in study design, methods, and interpretations and you can criticize the study on the merit of those
+-   To the author's point about financial biases: Unlike him, I want to note I personally don’t really care about who funded a study. As long as the results are analytically valid and study design is sound I have no problems who funded it, as they’d be valid independent of funding. Typically if there are nefarious things at play from the financial bias of the funders then they show up in study design, methods, and interpretations and you can criticize the study on the merit of those
 
--   He notes problems in this meta analysis around inconsistent dosage, effect sizes, possible publication bias,length of usage and actual clinical significance which are all very very fair criticisms and ones I agree with. This is unfortunately a theme we’ll see going throughout today….. 
+-   The author notes problems in this meta analysis around inconsistent dosage, effect sizes, possible publication bias,length of usage and actual clinical significance which are all very very fair criticisms and ones I agree with. This is unfortunately a theme we’ll see going throughout today….. 
 
-We do happen to have a couple of Systematic Reviews on the topic of supplementary collagen for cartilages, joints and muscles! Great!! Let’s read further…..
+We do happen to have a couple of broad Systematic Reviews on the topic of supplementary collagen for cartilages, joints and muscles! Great!! Let’s read further…..
 
 [Role of Collagen Derivatives in Osteoarthritis and Cartilage Repair: A Systematic Scoping Review With Evidence Mapping](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7695755/)
 
--   41 published studies were ultimately included in the review, 16 ofwhich were preclinical studies and 25 were clinical studies (including four systematic reviews/meta-analyses)
+-   41 published studies were ultimately included in the review, 16 of which were preclinical studies and 25 were clinical studies (including four systematic reviews/meta-analyses)
 
 -   Oh dear god, these didn't list baseline protein intakes of people in the study in the review (making me have to go through each trial to find if they did) 
 
@@ -88,7 +88,7 @@ We do happen to have a couple of Systematic Reviews on the topic of supplementar
 
 -   Also for some reason smaller studies seem to consistently show higher effect sizes than larger ones. This is also another red flag.
 
--   We'll end up diving into some of the issues these individual studies had in the next section. The errors found in those trials are broadly representative of the problems most of these trials in this review have. I've definitely come to a different conclusion about collagen than these authors.
+-   We'll end up diving into some of the issues these individual studies had in the next section. The errors found in those individual studies are broadly representative of the problems the rest of them in this review have. I've definitely come to a different conclusion about collagen than these authors.
 
 [The effects of collagen peptide supplementation on body composition, collagen synthesis, and recovery from joint injury and exercise: a systematic review](https://link.springer.com/article/10.1007/s00726-021-03072-x)
 
@@ -108,9 +108,9 @@ We do happen to have a couple of Systematic Reviews on the topic of supplementar
 
 -   Unlike the previous meta before, they did many more of the basic minimum things right compared to the metas I've cited earlier in this review. But there are still many basic errors to highlight here....
 
--   This is yet another meta analysis that used SMD improperly. They did have a meta analyst specialist on this meta, but still have to ding points for SMD especially if you don't have to use it and can just convert to common units instead.
+-   This is yet another meta analysis that has forest plots using SMD improperly. Though they did have a meta analyst statistician specialist on this meta, it tends to be the researchers' faults for being lazy and not doing the unit coversions when appropriate such that Mean Difference can be used.
 
--   The forest plots at least do a good job of separating time points and other things into relevant subgroup analyses. (I can't believe I have to offer such a basic point as legitimate praise)
+-   The forest plots at least do a good job of separating time points and other relevant categorizations into somewhat appropriate subgroup analyses. (I can't believe I have to offer such a basic point as legitimate praise)
 
 -   Important to note that this meta was situated on trials that focused mainly in older woman between 35 - 60 years of age.
 
@@ -188,7 +188,7 @@ Overall if there’s a possible benefit to be had from collagen, the strongest e
 -   Power Analysis consists of this sentence:\
     "This effect size assures, at a significance level of a=0.05, a power of 90% for WOMAC score, and of more than 80% for Lysholm score". Without sharing what “this effect size” meant. 
 
-    -   Who’s the genius that came up with this masterful power analysis????? (I hope the sarcasm is dripping through) 
+    -   Who’s the genius that came up with this masterful phrasing that makes up the power analysis????? (I hope the sarcasm is dripping through) 
 
     -   Seriously again these researchers are a joke and deserve to be publicly stoned (obviously I’m kidding don’t report me)
 
@@ -196,11 +196,13 @@ Overall if there’s a possible benefit to be had from collagen, the strongest e
 
 # My Final Conclusions on the Topic
 
-Yes, glancing at these other trials, I’ve lost pretty much all faith that most, if any, of these can be redeemed. I need them to assess for baseline protein intake and have the placebo total protein matched AT A MINIMUM but I have only encountered like 2-3 that did that, and 2 of them assess MPS only (lol) and the last one I could not get access to (also it’s an incredibly small study).  Thus almost none of them are equipped to interpret collagen’s effect on the body, independent of its protein content. I think I’m done here, skimming over the characteristics of these trials in the systematic review as well as from searches I don’t think I can find a single one that’s redeemable.
+Yes, after checking out the primary high level tiers of evidence and skimming over what I didn't read in depth, I’ve lost pretty much all faith that most, if any, of these can be redeemed. I need them to assess for baseline protein intake and have the placebo total protein matched AT A MINIMUM but I have only encountered like 2-3 that did that, with 2 of them assessing MPS only (lol) and the last one uvailable to read (also it’s an incredibly small study). 
 
-Update: My friend has informed me that there’s actually some decent evidence for isolated glycine (one of the primary amino acid constituents of collagen, along with proline and isoproline) for various endpoints. I’ll let him fetch some evidence on that and that could maybe offer any unique benefits of collagen if they are to be had for far cheaper. We shall see.
+Thus almost none of them are equipped to interpret collagen’s effect on the body, independent of its protein content. I think I’m done here.
 
-Given tihs, at present, it’s not clear collagen is good for much beyond the protein content (except for maybe skin aging if you’re a older woman with skin aging?), and I’d just recommend getting enough protein (daily 1.2 g protein/kg lean body mass, if being conservative up to 1.6g/kg daily for older adults). Getting the total protein intake to at least 1g/kg lean mass is pretty broadly important for overall health.\
+Update: My friend has informed me that there’s actually some decent evidence for isolated glycine (one of the primary amino acid constituents of collagen, along with proline and isoproline) for various endpoints. When he provides me with those papers, I'll talk about it on this blog and we can see if there are any benefits of collagen if they are to be had but taking in glycine directly instead. We shall see.
+
+At present, it’s not clear collagen is good for much beyond the protein content (except for maybe skin aging if you’re a older woman with skin aging?), and I’d just recommend getting enough protein (1-1.2 g protein/kg lean body mass, if being conservative up to 1.6g/kg daily for older adults). Getting the total protein intake to at least 1g/kg lean mass is pretty broadly important for overall health.\
 \
 If you find 1.2g/kg hard, protein supplements are an excellent way to get up to that number, and using plain soy protein isolate for example is much more versatile than people think. Protein rich legumes like soy and lupini beans are great. Soy itself is very versatile as high protein options like tofu, tempeh, and TVP exist. Seitan is a real showstopper as well, since the protein to calorie ratio is off the charts and it is usually quite cheap to buy and store in bulk. There are lots of creative ways to up protein intake, and really going from 0.6 g/kg protein to 1g/kg protein goes such a long way. Don't stress out over going above and beyond in protein intake if it's causing stress and is leading to a less palatable diet. You've done most of the work by getting to 1g protein/kg lean mass.\
 \
